upd：springboot版本2.6升级到3，jdk1.8升级为jdk17