@@ -9,26 +9,15 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletRequestWrapper;
 import jakarta.servlet.http.HttpServletResponse;
-import okhttp3.OkHttpClient;
 import org.slf4j.Logger;
-import org.springframework.boot.actuate.autoconfigure.security.servlet.EndpointRequest;
-import org.springframework.boot.autoconfigure.security.oauth2.resource.ResourceServerProperties;
-import org.springframework.cloud.client.loadbalancer.LoadBalanced;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Primary;
-import org.springframework.http.client.ClientHttpResponse;
-import org.springframework.http.client.OkHttp3ClientHttpRequestFactory;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.oauth2.config.annotation.web.configuration.EnableResourceServer;
-import org.springframework.security.oauth2.config.annotation.web.configuration.ResourceServerConfigurerAdapter;
-import org.springframework.security.oauth2.provider.token.*;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.preauth.AbstractPreAuthenticatedProcessingFilter;
 import org.springframework.util.AntPathMatcher;
-import org.springframework.web.client.DefaultResponseErrorHandler;
-import org.springframework.web.client.RestTemplate;
 import org.springframework.web.filter.OncePerRequestFilter;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.servlet.mvc.method.RequestMappingInfo;
@@ -36,14 +25,10 @@ import org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandl
 import vip.yeee.memo.base.model.annotation.AnonymousAccess;
 import vip.yeee.memo.base.util.LogUtils;
 import vip.yeee.memo.base.websecurityoauth2.constant.AuthConstant;
-import vip.yeee.memo.common.platformauth.client.handle.CustomAccessDeniedHandler;
-import vip.yeee.memo.common.platformauth.client.handle.CustomAuthenticationEntryPoint;
 import vip.yeee.memo.common.platformauth.client.properties.AuthClientProperties;
-import vip.yeee.memo.base.websecurityoauth2.constant.SecurityUserTypeEnum;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 资源服务器配置
@@ -52,16 +37,13 @@ import java.util.stream.Collectors;
  * @since 2022/4/28 17:02
  */
 @Configuration
-@EnableResourceServer
-public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
+public class ResourceServerConfig{
 
     private final static Logger log = LogUtils.commonAuthLog();
     @Resource
     private AuthClientProperties authClientProperties;
     @Resource
     private ApplicationContext applicationContext;
-    @Resource
-    private OkHttpClient okHttpClient;
     private static final Set<String> anonymousUrls = Sets.newHashSet();
 
     @PostConstruct
@@ -73,7 +55,7 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
             AnonymousAccess anonymousAccess = v.getMethodAnnotation(AnonymousAccess.class);
             // spring.mvc.pathmatch.matching-strategy: ant_path_matcher
             if (k.getPatternsCondition() != null && anonymousAccess != null && anonymousAccess.valid()) {
-                authClientProperties.getExclude().addAll(k.getPatternsCondition().getPatterns().stream().map(p -> p).collect(Collectors.toList()));
+                authClientProperties.getExclude().addAll(k.getPatternsCondition().getPatterns().stream().toList());
             }
 //            if (k.getPathPatternsCondition() != null && anonymousAccess != null && anonymousAccess.valid()) {
 //                anonymousUrls.addAll(k.getPathPatternsCondition().getPatterns().stream().map(PathPattern::getPatternString).collect(Collectors.toList()));
@@ -82,24 +64,12 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
         anonymousUrls.addAll(authClientProperties.getExclude());
     }
 
-    @Override
-    public void configure(HttpSecurity http) throws Exception {
-
-        http.csrf().disable()
-                .headers().frameOptions().disable()
-                .and()
-                .exceptionHandling()
-                // 处理未认证
-                .authenticationEntryPoint(new CustomAuthenticationEntryPoint())
-                // 处理未授权
-                .accessDeniedHandler(new CustomAccessDeniedHandler())
-                .and()
-                // 不创建会话
-                .sessionManagement()
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                .and()
+    @Order(2)
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http
                 .authorizeHttpRequests()
-                .requestMatchers(EndpointRequest.toAnyEndpoint()).permitAll()
+//                .requestMatchers(EndpointRequest.toAnyEndpoint()).permitAll()
                 .requestMatchers(ArrayUtil.toArray(anonymousUrls, String.class)).permitAll()
                 // 内部调用
                 .requestMatchers("/server/**").permitAll()
@@ -108,36 +78,9 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
 //                .antMatchers("/**/front/**").hasRole(SecurityUserTypeEnum.FRONT_USER.getRole())
 //                .antMatchers("/**/system/**").hasRole(SecurityUserTypeEnum.SYSTEM_USER.getRole())
                 .anyRequest().authenticated();
-
+        ;
         http.addFilterBefore(new AuthenticationBeforeFilter(), AbstractPreAuthenticatedProcessingFilter.class);
-
-    }
-
-    @Bean("remoteTokenLbRestTemplate")
-    @LoadBalanced
-    public RestTemplate remoteTokenLbRestTemplate() {
-        OkHttp3ClientHttpRequestFactory factory = new OkHttp3ClientHttpRequestFactory(okHttpClient);
-        RestTemplate restTemplate = new RestTemplate(factory);
-        restTemplate.setErrorHandler(new DefaultResponseErrorHandler() {
-            @Override
-            public void handleError(ClientHttpResponse response) throws IOException {
-                if(response.getRawStatusCode() != 400 && response.getRawStatusCode() != 401){
-                    super.handleError(response);
-                }
-            }
-        });
-        return restTemplate;
-    }
-
-    @Bean
-    @Primary
-    public ResourceServerTokenServices resourceServerTokenServices(ResourceServerProperties resourceServerProperties){
-        RemoteTokenServices remoteTokenServices = new RemoteTokenServices();
-        remoteTokenServices.setRestTemplate(remoteTokenLbRestTemplate());
-        remoteTokenServices.setCheckTokenEndpointUrl(resourceServerProperties.getTokenInfoUri());
-        remoteTokenServices.setClientId(resourceServerProperties.getClientId());
-        remoteTokenServices.setClientSecret(resourceServerProperties.getClientSecret());
-        return remoteTokenServices;
+        return http.build();
     }
 
     private static class AuthenticationBeforeFilter extends OncePerRequestFilter {
